Add template page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,96 @@
-<p>Hello</p>
+<!doctype html>
+<html class="no-js" lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>EMBL Design Language</title>
+    <link rel="stylesheet" href="css/embl-design-language-full.css">
+  </head>
+  <body>
+    <div class="global-masthead">
+      <div class="row">
+        <div class="auto columns"></div>
+        <div class="small-4 medium-3 large-2 columns">
+          <a href="#"><img class="logo padding-top-medium padding-bottom-xlarge padding-right-large" src="assets/logos/hexagon-mono-black.svg" /></a>
+        </div>
+        <!-- <div class="small-1 medium-1 large-1 columns"></div> -->
+      </div>
+    </div>
+
+    <div class="">
+      <div class="large-11 columns black-background margin-bottom-xlarge">
+        <div class="row">
+          <!-- <div class="show-for-large large-1 columns"></div> -->
+          <h1 class="margin-left-medium intro white-color padding-top-large margin-bottom-none">Our Design Language</h1>
+          <p class="margin-left-medium lead white-color">This repository homes the web framework for the EMBL Design Language.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="grid-container">
+      <div class="row main-content-area" id="main-content-area">
+        <div class="large-12 columns">
+          <div class="">
+
+            <p class="">This file is a contact sheet to see the very basics of the EMBL Design Language framework, for full guidance on using it, <a class="readmore" href="https://embl-design-language.github.io/Springboard/">head to the Springboard</a></p>
+
+            <p>Here is a readout of some basic styles:</p>
+
+            <hr/>
+
+            <h1 class="intro">A huge 'h1.intro' header.</h1>
+            <h1>h1. This is a very large header.</h1>
+            <h2>h2. This is a large header.</h2>
+            <h3>h3. This is a medium header.</h3>
+            <h4>h4. This is a moderate header.</h4>
+            <h5>h5. This is a small header.</h5>
+            <h6>h6. This is a tiny header.</h6>
+
+
+            <ul>
+              <li>List item with a much longer description or more content.</li>
+              <li>List item
+                <ul>
+                  <li>Nested list item</li>
+                  <li>Nested list item</li>
+                  <li>Nested list item</li>
+                </ul>
+              </li>
+              <li>List item</li>
+              <li>List item</li>
+            </ul>
+
+            <ol>
+              <li>Cheese (essential)</li>
+                <ol>
+                  <li>Normal bacon</li>
+                  <li>Canadian bacon</li>
+                </ol>
+              </li>
+              <li>Mushrooms</li>
+            </ol>
+
+            <dl>
+              <dt>Time</dt>
+              <dd>The indefinite continued progress of existence and events in the past, present, and future regarded as a whole.</dd>
+              <dt>Space</dt>
+              <dd>A continuous area or expanse that is free, available, or unoccupied.</dd>
+              <dd>The dimensions of height, depth, and width within which all things exist and move.</dd>
+            </dl>
+
+            <blockquote>
+              Those people who think they know everything are a great annoyance to those of us who do.
+              <cite>Isaac Asimov</cite>
+            </blockquote>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script src="https://embl-design-language.github.io/Framework-for-Websites/bower_components/jquery/dist/jquery.js"></script>
+    <script src="https://embl-design-language.github.io/Framework-for-Websites/bower_components/what-input/dist/what-input.js"></script>
+    <script src="https://embl-design-language.github.io/Framework-for-Websites/bower_components/foundation-sites/dist/js/foundation.js"></script>
+    <script src="https://embl-design-language.github.io/Framework-for-Websites/js/embl-design-language-framework.js"></script>
+  </body>
+</html>
