Finalise very basic setup

--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EMBL Design Language</title>
-    <link rel="stylesheet" href="css/embl-design-language-full.css">
+    <link rel="stylesheet" href="https://embl-design-language.github.io/Framework-for-Websites/css/embl-design-language-full.css">
+    <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
     <div class="global-masthead">
       <div class="row">
         <div class="auto columns"></div>
         <div class="small-4 medium-3 large-2 columns">
-          <a href="#"><img class="logo padding-top-medium padding-bottom-xlarge padding-right-large" src="assets/logos/hexagon-mono-black.svg" /></a>
+          <a href="#"><img class="logo padding-top-medium padding-bottom-xlarge padding-right-large" src="https://embl-design-language.github.io/Framework-for-Websites/assets/logos/hexagon-mono-black.svg" /></a>
         </div>
         <!-- <div class="small-1 medium-1 large-1 columns"></div> -->
       </div>
