--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://embl-design-language.github.io/Framework-for-Websites/css/embl-design-language-full.css">
     <link rel="stylesheet" href="css/app.css">
   </head>
-  <body>
+  <body class="show-grid">
     <div class="global-masthead">
       <div class="row">
         <div class="auto columns"></div>
