--- a/index.html
+++ b/index.html
@@ -15,19 +15,11 @@
         <div class="small-4 medium-3 large-2 columns">
           <a href="#"><img class="logo padding-top-medium padding-bottom-xlarge padding-right-large" src="https://embl-design-language.github.io/Framework-for-Websites/assets/logos/hexagon-mono-black.svg" /></a>
         </div>
-        <!-- <div class="small-1 medium-1 large-1 columns"></div> -->
       </div>
     </div>
 
-    <div class="">
-      <div class="large-11 columns black-background margin-bottom-xlarge">
-        <div class="row">
-          <!-- <div class="show-for-large large-1 columns"></div> -->
-          <h1 class="margin-left-medium intro white-color padding-top-large margin-bottom-none">Our Design Language</h1>
-          <p class="margin-left-medium lead white-color">This repository homes the web framework for the EMBL Design Language.</p>
-        </div>
-      </div>
-    </div>
+    <h1 class="margin-left-medium intro padding-top-large margin-bottom-none">Our Design Language</h1>
+    <p class="margin-left-medium lead">This repository homes the web framework for the EMBL Design Language.</p>
 
     <div class="grid-container">
       <div class="row main-content-area" id="main-content-area">
