Finish grid layout

--- a/index.html
+++ b/index.html
@@ -9,22 +9,86 @@
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body class="show-grid">
-    <div class="global-masthead">
-      <div class="row">
-        <div class="auto columns"></div>
-        <div class="small-4 medium-3 large-2 columns">
-          <a href="#"><img class="logo padding-top-medium padding-bottom-xlarge padding-right-large" src="https://embl-design-language.github.io/Framework-for-Websites/assets/logos/hexagon-mono-black.svg" /></a>
-        </div>
-      </div>
-    </div>
 
-    <h1 class="margin-left-medium intro padding-top-large margin-bottom-none">Our Design Language</h1>
-    <p class="margin-left-medium lead">This repository homes the web framework for the EMBL Design Language.</p>
 
     <div class="grid-container">
-      <div class="row main-content-area" id="main-content-area">
-        <div class="large-12 columns">
-          <div class="">
+      <div class="global-masthead">
+        <div class="row">
+          <div class="large-10 columns">&nbsp;</div>
+          <div class="large-2 columns">
+            <a href="#"><img class="logo padding-top-medium padding-bottom-xlarge padding-right-large" src="https://embl-design-language.github.io/Framework-for-Websites/assets/logos/hexagon-mono-black.svg" /></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="main-content-area" id="main-content-area">
+
+        <div class="row">
+          <div class="large-12 columns">
+            <h1 class="margin-left-medium intro padding-top-large margin-bottom-none">Our Design Language</h1>
+            <p class="margin-left-medium lead">This repository homes the web framework for the EMBL Design Language.</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="large-1 columns">
+            <p>1 column</p>
+          </div>
+          <div class="large-2 columns">
+            <p>2 columns</p>
+          </div>
+          <div class="large-3 columns">
+            <p>3 columns</p>
+          </div>
+          <div class="large-4 columns">
+            <p>4 columns</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="large-5 columns">
+            <p>5 columns</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="large-6 columns">
+            <p>6 columns</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="large-7 columns">
+            <p>7 columns</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="large-8 columns">
+            <p>8 columns</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="large-9 columns">
+            <p>9 columns</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="large-10 columns">
+            <p>10 columns</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="large-11 columns">
+            <p>11 columns</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="large-12 columns">
 
             <p class="">This file is a contact sheet to see the very basics of the EMBL Design Language framework, for full guidance on using it, <a class="readmore" href="https://embl-design-language.github.io/Springboard/">head to the Springboard</a></p>
 
