Add basic boilerplate content

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="row">
           <div class="large-10 columns">&nbsp;</div>
           <div class="large-2 columns">
-            <a href="#"><img class="logo padding-top-medium padding-bottom-xlarge padding-right-large" src="https://embl-design-language.github.io/Framework-for-Websites/assets/logos/hexagon-mono-black.svg" /></a>
+            <a href="#"><img class=" padding-top-medium padding-bottom-medium" src="https://embl-design-language.github.io/Framework-for-Websites/assets/logos/EMBL-mono-black.svg" /></a>
           </div>
         </div>
       </div>
@@ -25,8 +25,8 @@
 
         <div class="row">
           <div class="large-12 columns">
-            <h1 class="margin-left-medium intro padding-top-large margin-bottom-none">Our Design Language</h1>
-            <p class="margin-left-medium lead">This repository homes the web framework for the EMBL Design Language.</p>
+            <h1 class="margin-left-medium intro padding-top-large">Site name goes here</h1>
+            <p class="margin-left-medium lead">Subtitle and some stuff, maybe a <a href="#">link</a>.</p>
           </div>
         </div>
 
