Some basic layout stuff

--- a/grid.html
+++ b/grid.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://embl-design-language.github.io/Framework-for-Websites/css/embl-design-language-full.css">
     <link rel="stylesheet" href="css/app.css">
   </head>
-  <body class="show-grid-x">
+  <body class="show-grid">
 
 
     <div class="grid-container">
@@ -25,84 +25,8 @@
 
         <div class="row">
           <div class="large-12 columns">
-            <div class="margin-left-medium caption padding-top-large">A functional unit of something else</div>
-            <h1 class="margin-left-small intro">Site name goes here</h1>
+            <h1 class="margin-left-medium intro padding-top-large">Site name goes here</h1>
             <p class="margin-left-medium lead">Subtitle and some stuff, maybe a <a href="#">link</a>.</p>
-          </div>
-        </div>
-
-
-        <div class="row">
-          <div class="large-12 columns"
-            style="background-image: url(images/cells.jpg);background-size: contain;min-height: 41rem;background-repeat: no-repeat;"
-          >
-            <div class="row">
-              <div class="columns margin-top-xlarge margin-bottom-large">
-                <h2 class="white-color large-push-1 margin-top-medium">Agenda</h2>
-              </div>
-            </div>
-            <div class="row">
-              <div class="medium-up-5 large-push-1 large-10 button-grid" data-equalizer data-equalize-on="large" id="test-eq">
-                <div class="column">
-                  <div class="white-transparent-background inner column margin-bottom-large" data-equalizer-watch>
-                    <span class="badge">1</span>
-                    <p>What is EMBL?</p>
-                  </div>
-                </div>
-                <div class="column">
-                  <div class="white-transparent-background inner column margin-bottom-large" data-equalizer-watch>
-                    <span class="badge">2</span>
-                    <p>Research</p>
-                  </div>
-                </div>
-                <div class="column">
-                  <div class="white-transparent-background inner column margin-bottom-large" data-equalizer-watch>
-                    <span class="badge">#</span>
-                    <p>Services</p>
-                  </div>
-                </div>
-                <div class="column">
-                  <div class="white-transparent-background inner column margin-bottom-large" data-equalizer-watch>
-                    <span class="badge">#</span>
-                    <p>Training</p>
-                  </div>
-                </div>
-                <div class="column">
-                  <div class="x-white-transparent-background inner column margin-bottom-large" data-equalizer-watch>
-                  </div>
-                </div>
-                <div class="column">
-                  <div class="x-white-transparent-background inner column margin-bottom-large" data-equalizer-watch>
-                    <p></p>
-                  </div>
-                </div>
-                <div class="column">
-                  <div class="white-transparent-background inner column margin-bottom-large" data-equalizer-watch>
-                    <span class="badge">#</span>
-                    <p>Technology development and transfer</p>
-                  </div>
-                </div>
-                <div class="column">
-                  <div class="white-transparent-background inner column margin-bottom-large" data-equalizer-watch>
-                    <span class="badge">#</span>
-                    <p>Integration of European life sciences</p>
-                  </div>
-                </div>
-                <div class="column">
-                  <div class="white-transparent-background inner column" data-equalizer-watch>
-                    <span class="badge">#</span>
-                    <p>Working at EMBL</p>
-                  </div>
-                </div>
-                <div class="column">
-                  <div class="white-transparent-background inner column" data-equalizer-watch>
-                    <span class="badge">#</span>
-                    <p>Institutional information</p>
-                  </div>
-                </div>
-              </div>
-
-            </div>
           </div>
         </div>
 
