Add in global navigation

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EMBL Design Language</title>
+    <title>EMBL Grid test</title>
     <link rel="stylesheet" href="https://embl-design-language.github.io/Framework-for-Websites/css/embl-design-language-full.css">
+    <link rel="stylesheet" href="https://ebi.emblstatic.net/web_guidelines/EBI-Icon-fonts/v1.3/fonts.css">
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body class="show-grid-x">
@@ -13,11 +14,17 @@
 
     <div class="grid-container">
       <div class="global-masthead">
-        <div class="row">
-          <div class="large-10 columns">&nbsp;</div>
+        <div class="row global-navigation">
+          <div class="large-1 columns">Heidelberg
+          </div>
+          <div class="large-11 columns text-right">Research Services Training Jobs About Us  <i class="icon icon-common icon-search"></i>
+            <a href="#" style="padding-left:1rem; margin-left: 1rem; border-left: 1px solid #ccc;"><img style="height: 40px;" class="" src="https://embl-design-language.github.io/Framework-for-Websites/assets/logos/EMBL-mono-black.svg" /></a>
+
+          </div>
+          <!-- <div class="large-10 columns text-right caption" style="padding-top: 1.9rem; font-size: .9rem;">&nsbsp;</div>
           <div class="large-2 columns">
             <a href="#"><img class=" padding-top-medium padding-bottom-medium" src="https://embl-design-language.github.io/Framework-for-Websites/assets/logos/EMBL-mono-black.svg" /></a>
-          </div>
+          </div> -->
         </div>
       </div>
 
@@ -25,8 +32,7 @@
 
         <div class="row">
           <div class="large-12 columns">
-            <div class="margin-left-medium caption padding-top-large">A functional unit of something else</div>
-            <h1 class="margin-left-small intro">Site name goes here</h1>
+            <h1 class="margin-left-small intro">Training</h1>
             <p class="margin-left-medium lead">Subtitle and some stuff, maybe a <a href="#">link</a>.</p>
           </div>
         </div>
