Create as EMBL training header

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <div class="grid-container">
       <div class="global-masthead">
         <div class="row global-navigation">
-          <div class="large-1 columns">Heidelberg
+          <div class="large-3 columns">Heidelberg
           </div>
-          <div class="large-11 columns text-right">Research Services Training Jobs About Us  <i class="icon icon-common icon-search"></i>
+          <div class="large-9 columns text-right">Research Services Training Jobs About Us  <i class="icon icon-common icon-search"></i>
             <a href="#" style="padding-left:1rem; margin-left: 1rem; border-left: 1px solid #ccc;"><img style="height: 40px;" class="" src="https://embl-design-language.github.io/Framework-for-Websites/assets/logos/EMBL-mono-black.svg" /></a>
 
           </div>
@@ -33,12 +33,40 @@
         <div class="row">
           <div class="large-12 columns">
             <h1 class="margin-left-small intro">Training</h1>
-            <p class="margin-left-medium lead">Subtitle and some stuff, maybe a <a href="#">link</a>.</p>
+            <p class="margin-left-medium lead">Sample showing the header for the  <a href="#">EMBL training section</a>.</p>
           </div>
         </div>
 
-
         <div class="row">
+          <div class="large-12 columns">
+            <div class="row">
+              <div class="columns margin-top-xlarge margin-bottom-large">
+                <h2 class="margin-top-medium">Training goals</h2>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row large-collapse">
+          <div class="large-3 columns">
+            <div style="background-image: url(images/cells.jpg);background-size: cover; min-height: 30rem;background-repeat: no-repeat;">
+            </div>
+          </div>
+          <div class="large-6 columns">
+            <div class="row medium-up-2 large-collapse">
+              <div class="gray-box columns" style="min-height: 15rem;"><p>Content here</p></div>
+              <div class="gray-box columns" style="min-height: 15rem;"><p>Content here</p></div>
+              <div class="gray-box columns" style="min-height: 15rem;"><p>Content here</p></div>
+              <div class="gray-box columns" style="min-height: 15rem;"><p>Content here</p></div>
+            </div>
+          </div>
+          <div class="large-3 columns">
+            <div class="row  large-collapse">
+              <div class="gray-box columns" style="min-height: 30rem;"><p>Inspiring and educating about the complexity and beauty of life</p></div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row padding-top-xlarge">
           <div class="large-12 columns"
             style="background-image: url(images/cells.jpg);background-size: contain;min-height: 41rem;background-repeat: no-repeat;"
           >
