Create a more complete look.

--- a/index.html
+++ b/index.html
@@ -12,22 +12,23 @@
   <body class="show-grid-x">
 
 
-    <div class="grid-container">
-      <div class="global-masthead">
-        <div class="row global-navigation">
-          <div class="large-3 columns">Heidelberg
+    <div data-sticky-container>
+      <div class="global-masthead" data-sticky data-margin-top="0">
+        <div class="grid-container">
+          <div class="row global-navigation">
+            <div class="large-3 columns">
+              <span class="where"><a href="https://embl.de">Heidelberg</a></span>
+              <span class="what"><a href="#">Training</a></span>
+            </div>
+            <div class="large-9 columns text-right">Research Services Training Jobs About Us  <i class="icon icon-common icon-search"></i>
+              <a href="#" class="embl-logo"></a>
+            </div>
           </div>
-          <div class="large-9 columns text-right">Research Services Training Jobs About Us  <i class="icon icon-common icon-search"></i>
-            <a href="#" style="padding-left:1rem; margin-left: 1rem; border-left: 1px solid #ccc;"><img style="height: 40px;" class="" src="https://embl-design-language.github.io/Framework-for-Websites/assets/logos/EMBL-mono-black.svg" /></a>
-
-          </div>
-          <!-- <div class="large-10 columns text-right caption" style="padding-top: 1.9rem; font-size: .9rem;">&nsbsp;</div>
-          <div class="large-2 columns">
-            <a href="#"><img class=" padding-top-medium padding-bottom-medium" src="https://embl-design-language.github.io/Framework-for-Websites/assets/logos/EMBL-mono-black.svg" /></a>
-          </div> -->
         </div>
       </div>
+    </div>
 
+    <div class="grid-container">
       <div class="main-content-area" id="main-content-area">
 
         <div class="row">
