--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   </head>
   <body class="show-grid-x">
 
-
     <div data-sticky-container>
       <div class="global-masthead" data-sticky data-margin-top="0">
         <div class="grid-container">
@@ -35,6 +34,17 @@
           <div class="large-12 columns">
             <h1 class="margin-left-small intro">Training</h1>
             <p class="margin-left-medium lead">Sample showing the header for the  <a href="#">EMBL training section</a>.</p>
+
+            <p class="margin-left-medium">
+              This is a rough concept that illustrates that:
+              <ol class="padding-left-small">
+                <li>That a structured "box" layout is plausable.
+                <li>A plausable hirearchy that echoes the print design: EMBL > site (who) > activity (what)
+                <li>How structure can be maintained as the user scrolls
+                <li>Roll of colour and poteintal contrast issues
+              </ol>
+            </p>
+
           </div>
         </div>
 
