--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <li>That a structured "box" layout is plausable.
                 <li>A plausable hirearchy that echoes the print design: EMBL > site (who) > activity (what)
                 <li>How structure can be maintained as the user scrolls
-                <li>Roll of colour and poteintal contrast issues
+                <li>Role of colour and poteintal contrast issues
               </ol>
             </p>
 
