Turn grid on for some areas

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </div>
         </div>
 
-        <div class="row">
+        <div class="row show-grid">
           <div class="large-12 columns">
             <div class="row">
               <div class="columns margin-top-xlarge margin-bottom-large">
@@ -77,7 +77,7 @@
           </div>
         </div>
 
-        <div class="row padding-top-xlarge">
+        <div class="row padding-top-xlarge show-grid">
           <div class="large-12 columns"
             style="background-image: url(images/cells.jpg);background-size: contain;min-height: 41rem;background-repeat: no-repeat;"
           >
@@ -151,60 +151,62 @@
           </div>
         </div>
 
-        <div class="row">
-          <div class="large-1 columns">
-            <p>1 column</p>
+        <div class="show-grid">
+          <div class="row">
+            <div class="large-1 columns">
+              <p>1 column</p>
+            </div>
+            <div class="large-2 columns">
+              <p>2 columns</p>
+            </div>
+            <div class="large-3 columns">
+              <p>3 columns</p>
+            </div>
+            <div class="large-4 columns">
+              <p>4 columns</p>
+            </div>
           </div>
-          <div class="large-2 columns">
-            <p>2 columns</p>
-          </div>
-          <div class="large-3 columns">
-            <p>3 columns</p>
-          </div>
-          <div class="large-4 columns">
-            <p>4 columns</p>
-          </div>
-        </div>
 
-        <div class="row">
-          <div class="large-5 columns">
-            <p>5 columns</p>
+          <div class="row">
+            <div class="large-5 columns">
+              <p>5 columns</p>
+            </div>
           </div>
-        </div>
 
-        <div class="row">
-          <div class="large-6 columns">
-            <p>6 columns</p>
+          <div class="row">
+            <div class="large-6 columns">
+              <p>6 columns</p>
+            </div>
           </div>
-        </div>
 
-        <div class="row">
-          <div class="large-7 columns">
-            <p>7 columns</p>
+          <div class="row">
+            <div class="large-7 columns">
+              <p>7 columns</p>
+            </div>
           </div>
-        </div>
 
-        <div class="row">
-          <div class="large-8 columns">
-            <p>8 columns</p>
+          <div class="row">
+            <div class="large-8 columns">
+              <p>8 columns</p>
+            </div>
           </div>
-        </div>
 
-        <div class="row">
-          <div class="large-9 columns">
-            <p>9 columns</p>
+          <div class="row">
+            <div class="large-9 columns">
+              <p>9 columns</p>
+            </div>
           </div>
-        </div>
 
-        <div class="row">
-          <div class="large-10 columns">
-            <p>10 columns</p>
+          <div class="row">
+            <div class="large-10 columns">
+              <p>10 columns</p>
+            </div>
           </div>
-        </div>
 
-        <div class="row">
-          <div class="large-11 columns">
-            <p>11 columns</p>
+          <div class="row">
+            <div class="large-11 columns">
+              <p>11 columns</p>
+            </div>
           </div>
         </div>
 
