Make a minimal boilerplate

--- a/index.html
+++ b/index.html
@@ -11,143 +11,12 @@
   </head>
   <body class="show-grid-x">
 
-    <div data-sticky-container>
-      <div class="global-masthead" data-sticky data-margin-top="0">
-        <div class="grid-container">
-          <div class="row global-navigation">
-            <div class="large-3 columns">
-              <span class="where"><a href="https://embl.de">Heidelberg</a></span>
-              <span class="what"><a href="#">Training</a></span>
-            </div>
-            <div class="large-9 columns text-right">Research Services Training Jobs About Us  <i class="icon icon-common icon-search"></i>
-              <a href="#" class="embl-logo"></a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
     <div class="grid-container">
       <div class="main-content-area" id="main-content-area">
 
         <div class="row">
-          <div class="large-12 columns">
-            <h1 class="margin-left-small intro">Training</h1>
-            <p class="margin-left-medium lead">Sample showing the header for the  <a href="#">EMBL training section</a>.</p>
-
-            <p class="margin-left-medium">
-              This is a rough concept that illustrates that:
-              <ol class="padding-left-small">
-                <li>That a structured "box" layout is plausable.
-                <li>A plausable hirearchy that echoes the print design: EMBL > site (who) > activity (what)
-                <li>How structure can be maintained as the user scrolls
-                <li>Role of colour and poteintal contrast issues
-              </ol>
-            </p>
-
-          </div>
-        </div>
-
-        <div class="row show-grid">
-          <div class="large-12 columns">
-            <div class="row">
-              <div class="columns margin-top-xlarge margin-bottom-large">
-                <h2 class="margin-top-medium">Training goals</h2>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row large-collapse">
-          <div class="large-3 columns">
-            <div style="background-image: url(images/cells.jpg);background-size: cover; min-height: 30rem;background-repeat: no-repeat;">
-            </div>
-          </div>
-          <div class="large-6 columns">
-            <div class="row medium-up-2 large-collapse">
-              <div class="gray-box columns" style="min-height: 15rem;"><p>Content here</p></div>
-              <div class="gray-box columns" style="min-height: 15rem;"><p>Content here</p></div>
-              <div class="gray-box columns" style="min-height: 15rem;"><p>Content here</p></div>
-              <div class="gray-box columns" style="min-height: 15rem;"><p>Content here</p></div>
-            </div>
-          </div>
-          <div class="large-3 columns">
-            <div class="row  large-collapse">
-              <div class="gray-box columns" style="min-height: 30rem;"><p>Inspiring and educating about the complexity and beauty of life</p></div>
-            </div>
-          </div>
-        </div>
-
-        <div class="row padding-top-xlarge show-grid">
-          <div class="large-12 columns"
-            style="background-image: url(images/cells.jpg);background-size: contain;min-height: 41rem;background-repeat: no-repeat;"
-          >
-            <div class="row">
-              <div class="columns margin-top-xlarge margin-bottom-large">
-                <h2 class="white-color large-push-1 margin-top-medium">Agenda</h2>
-              </div>
-            </div>
-            <div class="row">
-              <div class="medium-up-5 large-push-1 large-10 button-grid" data-equalizer data-equalize-on="large" id="test-eq">
-                <div class="column">
-                  <div class="white-transparent-background inner column margin-bottom-large" data-equalizer-watch>
-                    <span class="badge">1</span>
-                    <p>What is EMBL?</p>
-                  </div>
-                </div>
-                <div class="column">
-                  <div class="white-transparent-background inner column margin-bottom-large" data-equalizer-watch>
-                    <span class="badge">2</span>
-                    <p>Research</p>
-                  </div>
-                </div>
-                <div class="column">
-                  <div class="white-transparent-background inner column margin-bottom-large" data-equalizer-watch>
-                    <span class="badge">#</span>
-                    <p>Services</p>
-                  </div>
-                </div>
-                <div class="column">
-                  <div class="white-transparent-background inner column margin-bottom-large" data-equalizer-watch>
-                    <span class="badge">#</span>
-                    <p>Training</p>
-                  </div>
-                </div>
-                <div class="column">
-                  <div class="x-white-transparent-background inner column margin-bottom-large" data-equalizer-watch>
-                  </div>
-                </div>
-                <div class="column">
-                  <div class="x-white-transparent-background inner column margin-bottom-large" data-equalizer-watch>
-                    <p></p>
-                  </div>
-                </div>
-                <div class="column">
-                  <div class="white-transparent-background inner column margin-bottom-large" data-equalizer-watch>
-                    <span class="badge">#</span>
-                    <p>Technology development and transfer</p>
-                  </div>
-                </div>
-                <div class="column">
-                  <div class="white-transparent-background inner column margin-bottom-large" data-equalizer-watch>
-                    <span class="badge">#</span>
-                    <p>Integration of European life sciences</p>
-                  </div>
-                </div>
-                <div class="column">
-                  <div class="white-transparent-background inner column" data-equalizer-watch>
-                    <span class="badge">#</span>
-                    <p>Working at EMBL</p>
-                  </div>
-                </div>
-                <div class="column">
-                  <div class="white-transparent-background inner column" data-equalizer-watch>
-                    <span class="badge">#</span>
-                    <p>Institutional information</p>
-                  </div>
-                </div>
-              </div>
-
-            </div>
+          <div class="large-2 columns">
+            <img src="https://embl-design-language.github.io/Framework-for-Websites/assets/logos/EMBL-mono-black.svg" />
           </div>
         </div>
 
